<resources>
    <string name="app_name">原妙医学</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="stream_set_timer">Set Self Timer</string>
    <string name="stream_set_res_vid">Set Video Resolution</string>
    <string name="stream_set_res_photo">Set Photo Resolution</string>
    <string name="stream_set_error">Set Failed</string>
    <string name="stream_error_capturing">Capturing cannot switch</string>
    <string name="stream_error_recording">Recording cannot switch</string>
    <string name="setting">Setting</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="setting_power_supply">Frequency</string>
    <string name="setting_format">Format Camera</string>
    <string name="setting_format_desc">Do you want to format SD, all your data will be lost?</string>
    <string name="setting_capture_delay">Capture delay</string>
    <string name="setting_image_size">Image size</string>
    <string name="setting_video_size">Video size</string>
    <string name="title_burst">Continuous Shooting</string>
    <string name="setting_datestamp">Date Stamp</string>
    <string name="setting_about">About</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_product_name">Product Name</string>
    <string name="setting_firmware_version">FW Version</string>
    <string name="title_awb">White Balance</string>
    <string name="dialog_no_sd">No SD card, please insert one and retry</string>
    <string name="dialog_failed">Operation failed, please retry.</string>
    <string name="dialog_deleting">Deleting...</string>
    <string name="dialog_delete_failed_single">Error while deleting</string>
    <string name="dialog_downloading_single">Downloading...</string>
    <string name="dialog_cancel_downloading_succeeded">"Succeeded to cancel downloading"</string>
    <string name="dialog_cancel_downloading_failed">"Failed to cancel downloading""</string>
    <string name="dialog_btn_reconnect">Reconnect</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_sd_card_is_full">Warning: SD card full, cannot record or take pictures.</string>
    <string name="dialog_card_not_exist">SD card is not inserted, cannot perform capture/recording.</string>
    <string name="dialog_card_inserted">SD card inserted</string>
    <string name="dialog_card_removed">SD card is removed</string>
    <string name="dialog_card_full">SD card is full</string>
    <string name="dialog_card_lose">SD card does not exist</string>
    <string name="dialog_timeout">Connection to camera failed, please ensure Wi-Fi connection is working.</string>
    <string name="ok">OK</string>
    <string name="gallery_view_video_not_supported">Your camera device does not support video playback.</string>
    <string name="gallery_delete_des">Confirm deleting $1$ files?</string>
    <string name="gallery_download_with_vid_msg">"Total Files: $1$ Download Time: $2$ mins and $3$ seconds Confirm download?"</string>
    <string name="gallery_download">Download</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_cancel">Cancel</string>
    <string name="gallery_no_file_selected">No file selected</string>
    <string name="gallery_share_to">Share to...</string>
    <string name="image_delete_des">Confirm delete this picture?</string>
    <string name="video_delete_des">Confirm delete this video?</string>
    <string name="low_battery">Low battery, please recharge the device.</string>
    <string name="downloading_quit">All task of downloading will be cancelled,are you sure?</string>
    <string name="wb_auto">AUTO</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="wb_underwater">Underwater</string>
    <string name="burst_off">OFF</string>
    <string name="burst_3">3 photos</string>
    <string name="burst_5">5 photos</string>
    <string name="burst_10">10 photos</string>
    <string name="burst_7">7 photos</string>
    <string name="burst_15">15 photos</string>
    <string name="burst_30">30 photos</string>
    <string name="burst_hs">Continuous</string>
    <string name="dateStamp_off">OFF</string>
    <string name="dateStamp_date">Date</string>
    <string name="dateStamp_date_and_time">Date and time</string>
    <string name="frequency_50HZ">50HZ</string>
    <string name="frequency_60HZ">60HZ</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_progress">Has done: $1$    Wait: $2$    Failed: $3$</string>
    <string name="setting_time_lapse_interval">Time lapse interval</string>
    <string name="setting_time_lapse_duration">Time lapse duration</string>
    <string name="setting_time_lapse_duration_2M">2 Min</string>
    <string name="setting_time_lapse_duration_5M">5 Min</string>
    <string name="setting_time_lapse_duration_10M">10 Min</string>
    <string name="setting_time_lapse_duration_15M">15 Min</string>
    <string name="setting_time_lapse_duration_20M">20 Min</string>
    <string name="setting_time_lapse_duration_30M">30 Min</string>
    <string name="setting_time_lapse_duration_60M">60 Min</string>
    <string name="setting_time_lapse_duration_unlimit">Unlimited</string>
    <string name="capture_start">Start capturing...</string>
    <string name="capture_completed"> Capture completed...</string>
    <string name="title_timeLapse_mode">Timelapse mode</string>
    <string name="timeLapse_capture_mode">Timelapse capture mode</string>
    <string name="timeLapse_video_mode">Timelapse video mode</string>
    <string name="timeLapse_not_allow">Operation failed,please check the interval(be not OFF)</string>
    <string name="title_slow_motion">Slow motion</string>
    <string name="slowmotion">Slow-motion fuction</string>
    <string name="upside">Upside</string>
    <string name="action_processing">Processing...</string>
    <string name="message_reconnect">newwork is abnormal ,is reconnectting...</string>
    <string name="camera_wifi_configuration">Camera Wi-Fi configuration</string>
    <string name="camera_configuration_set">Set</string>
    <string name="password_limit">Password must be digit, and length must between 8 and 10</string>
    <string name="camera_wifi_name">Camera Wi-Fi name</string>
    <string name="camera_wifi_password">Camera Wi-Fi password</string>
    <string name="camera_name_limit">Wi-Fi Name length must not more  between 1 and 20</string>
    <string name="title_activity_local_photo_wall">Local photowall </string>
    <string name="title_activity_local_video_wall">Local videowall </string>
    <string name="download_complete_result">"Download completed,successed:$1$, failed:$2$"</string>
    <string name="no_files_found">No files found!</string>
    <string name="setting_updateFW_prompt">Do you want to update FW?</string>
    <string name="setting_update_fw">Update FW</string>
    <string name="setting_updatefw_failed">Updated failed</string>
    <string name="setting_updatefw_closeAppInfo">FW update has completed, please restart your application</string>
    <string name="setting_updatefw_failedInfo">FW update has failed,please restart your application</string>
    <string name="setting_auto_download">Auto download</string>
    <string name="setting_auto_download_size_limit">Limit of Auto download Size </string>
    <string name="setting_audio_switch">Audio switch</string>
    <string name="alert_no_camera_found">No camera found!</string>
    <string name="text_operation_success">Opertaion succeed</string>
    <string name="text_operation_failed">Opertaion failed!</string>
    <string name="text_not_support_preview">Does not support preview</string>
    <string name="current_size_not_support_image_stabilization">The current size is not support image stabilization</string>
    <string name="title_activity_pb_local_video">PbLocalVideoActivity</string>
    <string name="title_local_media">Media on My Phone</string>
    <string name="title_video">Video</string>
    <string name="title_photo">Photo</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="menu_list">List</string>
    <string name="title_activity_pb_local_photo">PbLocalPhotoActivity</string>
    <string name="title_activity_multi_pb">MultiPb</string>
    <string name="title_setting">Setting</string>
    <string name="title_preview">Preview</string>
    <string name="action_save">Save</string>
    <string name="title_activity_video_pb">VideoPbActivity</string>
    <string name="title_activity_photo_pb">PhotoPbActivity</string>
    <string name="text_sd_card_memory_shortage">sd card memory shortage!</string>
    <string name="title_activity_add_new_cam">Add New Camera</string>
    <string name="title_fragment_btpair_begin">Pairing</string>
    <string name="title_fragment_btpair_wifisetup">Wi-Fi setup</string>
    <string name="title_fragment_btpair_completed">Completed</string>
    <string name="text_btpair">Bluetooth Pair</string>
    <string name="text_ready_pair">Make sure your camera is ready for pairing and type the right PIN.</string>
    <string name="text_btpair_search_camera">Search</string>
    <string name="text_btpair_search_ble">Search BLE</string>
    <string name="text_btpair_setup">Setup</string>
    <string name="text_btpair_skip">SKIP</string>
    <string name="text_btpair_done">Done</string>
    <string name="text_btpair_already_connect_cam">When you already connect to camera by Wi-Fi.</string>
    <string name="text_btpair_connect_wifi">Wi-Fi Connect</string>
    <string name="text_btpair_connect_cam">Connect to Your Camera</string>
    <string name="text_btpair_support_bt">For new camera, and the camera support Bluetooth.</string>
    <string name="text_btpair_connect_operationsteps">Please click on the Done button to enter preview</string>
    <string name="text_btpair_setup_camwifi">Pair camera success, you can setup camera Wi-Fi or just click Setup to keep default setting.</string>
    <string name="text_add_new_camera">Add New Camera</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_connected">Connected</string>
    <string name="text_ble_devices">BLE Devices</string>
    <string name="text_classic_bluetooth_devices">Classic Bluetooth Devices</string>
    <string name="text_preview_hint_info">Only for iCatch SBC</string>
    <string name="app_exception">APP  meets exception!</string>
    <string name="text_reconnect_timeout">Reconnect timeout</string>
    <string name="text_reconnect_failed">Reconnect failed</string>
    <string name="message_reconnect_failed">Cannot connect to the camera Wi-Fi...</string>
    <string name="message_connected_other_wifi">Connected to other devices wifi</string>
    <string name="setting_type_switch">Switch settings</string>
    <string name="setting_type_general">General settings</string>
    <string name="setting_type_specific">Specific Settings</string>
    <string name="setting_type_other">Other Settings</string>
    <string name="setting_type_custom">Custom Settings</string>
    <string name="text_device_exception">Device exception!</string>
    <string name="text_get_data_exception">Getting data exception!</string>
    <string name="text_reconnection">reconnection...</string>
    <string name="action_set_ip">Input IP</string>
    <string name="setting_title_screen_saver">Screen saver</string>
    <string name="setting_title_auto_power_off">Auto power off</string>
    <string name="setting_title_power_on_auto_record">Power-on auto record</string>
    <string name="brightness">Brightness</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="white_balance">WB</string>
    <string name="BLC">背光捕捉</string>
</resources>