<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/WB_IQ"
    android:layout_gravity="bottom"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/close_WB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cancel_task">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/WB_AUTO"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="wrap_content"
                android:text="@string/wb_auto"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/WB_DAYLIGHT"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="wrap_content"
                android:text="@string/wb_daylight"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/WB_CLOUDY"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="wrap_content"
                android:text="@string/wb_cloudy"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/WB_INCADESCENT"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="@string/wb_incandescent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/WB_FLOURESCENT_H"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="@string/wb_fluorescent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </LinearLayout>
</RelativeLayout>