<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/pb_IQ"
    android:layout_gravity="bottom"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/close_IQ_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cancel_task">
            </ImageView>
            <Button
                android:id="@+id/brightness_bt"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="75sp"/>

            <Button
                android:id="@+id/hue_bt"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/hue"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"/>
            <Button
                android:id="@+id/saturation_bt"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/saturation"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="20dp">
            <Button
                android:id="@+id/white_balance_bt"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/white_balance"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="105sp"
                />
            <Button
                android:id="@+id/BLC_bt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/BLC"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"/>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>